src/app/movies/movies.component.scss
@import '../../variables.scss';


.homepage-container {
    background-color: $black;
    padding-top: 2rem;

    .filter-genre {
        cursor: pointer;
        display: flex;
        flex-wrap: wrap;
        color: white;

        div {
            padding: 1rem;
            margin: 0.5rem;
            background-image: $purple-gradient;
            width: fit-content;
            border-radius: 2rem;
        }
    }

    .search-input-container {
        margin-bottom: 2rem;
    }

    h2 {
        color: $white;
        margin-left: 2rem;
        font-size: 2rem;
        margin-top: 2rem;
        margin-bottom: 2rem;
    }

    .movies-list-container {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        padding: 2rem;
        gap: 2rem;

        tp-movies-movie-container-common {
            width: 45%;
        }
    }
}

